--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "stylelint-order": "^6.0.3",
     "stylelint-prettier": "^4.0.2",
     "tailwindcss": "^3.3.3",
-    "typescript": "5.3.2"
+    "typescript": "5.3.2",
+    "yarn": "^1.22.22"
   },
   "resolutions": {
     "autoprefixer": "10.4.5"
