--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-resume-template",
+  "name": "jasim-uddin-react-resume",
   "version": "2.0.0",
   "private": true,
   "scripts": {
